infra/proxy/cctv.home/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cctv-home-proxy
  namespace: infra
subsets:
  - addresses:
      - ip: 10.3.0.2
    ports:
      - port: 8971
        protocol: TCP
