infra/proxy/cctv.home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cctv-home-proxy
  namespace: infra
spec:
  ports:
  - port: 8971
    targetPort: 8971
  clusterIP: None
