infra/proxy/cctv.home/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cctv-home-internal
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: infra-ignore-upstream-cert@kubernetescrd

spec:
  rules:
  - host: cctv.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cctv-home-proxy
            port:
              number: 8971
  tls:
  - hosts:
    - cctv.home
    secretName: cctv-home-internal-tls
