infra/proxy/cctv.home/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cctv-home-internal
  namespace: infra
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`cctv.home`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: cctv-home-proxy
          port: 8971
          scheme: https
          serversTransport: ignore-upstream-cert
          passHostHeader: false
  tls:
    secretName: cctv-home-internal-tls
